website/docs: fix letter spacing on high zoom [GH-2486]

--- a/website/docs/source/stylesheets/_base.less
+++ b/website/docs/source/stylesheets/_base.less
@@ -87,7 +87,7 @@ h6 {
 	}
 
 p, td {
-	letter-spacing: 1px;
+	letter-spacing: 0.05em;
 	line-height: 32px;
 
 	a {
